# readerlet

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
readerlet/: article.py  cli.py  epub.py  extract.py  mailer.py
readerlet/js/: extract_content.js  extract_file.js
readerlet/templates/: content.opf  content.xhtml  stylesheet.css
tests/: test_article.py  test_node_utils.py  test_readerlet.py  test_readerlet_cli.py
