[project]
name = "readerlet"
version = "0.1"
description = "A command-line utility for extracting and packaging web content for offline reading"
readme = "README.md"
authors = [{name = "pavzari"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click",
    "bs4",
    "requests",
    "stkclient"

]

[project.urls]
Homepage = "https://github.com/pavzari/readerlet"
Changelog = "https://github.com/pavzari/readerlet/releases"
Issues = "https://github.com/pavzari/readerlet/issues"
CI = "https://github.com/pavzari/readerlet/actions"

[project.entry-points.console_scripts]
readerlet = "readerlet.cli:cli"

[project.optional-dependencies]
test = ["pytest", "pytest-subprocess"]